# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "aoc2022lib",
  "d01",
  "d02",
  "d03",
  "d04",
  "d05",
  "d06",
  "d07",
  "d08",
  "d09",
  "d10",
  "d11",
  "d12",
  "d13",
  "d14",
  "d15",
  "d17",
  "d18",
  "d20",
  "d21",
  "d22",
]
resolver = "2"

[workspace.dependencies]
aoc2022lib = { path = "aoc2022lib" }
itertools = "0.13.0"
test-case = "3.3.1"
anyhow = "1.0.81"
derive_deref = "1.1.1"
nom = "7.1.3"

[profile.release]
debug = true

[workspace.lints.clippy]
pedantic = "warn"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
