[package]
name = "d11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
aoc2022lib.workspace = true
itertools.workspace = true
nom.workspace = true
num = "0.4.1"

[lints]
workspace = true
