[package]
name = "d15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
aoc2022lib.workspace = true
derive_deref = "1.1.1"
itertools.workspace = true
rayon = "1.10.0"
regex.workspace = true

[lints]
workspace = true
