[package]
name = "d16"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
libaoc.workspace = true
itertools.workspace = true
nom.workspace = true
pathfinding.workspace = true

[dependencies.petgraph]
version = "0.6.5"
default-features = false
features = ["graphmap"]

[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
