[package]
name = "d18"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
itertools.workspace = true
nom.workspace = true
pathfinding.workspace = true
aoc2022lib.workspace = true

[lints]
workspace = true
