[package]
name = "d20"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc2022lib.workspace = true
anyhow.workspace = true
itertools.workspace = true

[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
