[package]
name = "d22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
aoc2022lib.workspace = true
bare_metal_modulo = "1.2.4"
derive_deref.workspace = true
itertools.workspace = true
nom.workspace = true

[dev-dependencies]
test-case.workspace = true

[lints]
workspace = true
